Old version/parsers/antlr/terrainfeature/TerrainParser.java
/*
 * Copyright (c) 1987-2022 Angband contributors.
 *
 * This work is free software; you can redistribute it and/or modify it
 * under the terms of either:
 *
 * a) the GNU General Public License as published by the Free Software
 *    Foundation, version 2, or
 *
 * b) the Angband licence:
 *    This software may be copied and distributed for educational, research,
 *    and not for profit purposes provided that this copyright and statement
 *    are included in all such copies.  Other copyrights may also apply.
 *
 *    Java code copyright (c) Rowan Crowther 2026
 */

// Generated from C:/Users/rowan/Documents/IntelliJProjects/Angband.4.2.6/src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/grammars/Terrain.g4 by ANTLR 4.13.2
package uk.co.jackoftrades.backend.io.parsers.antlr.terrainfeature;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import uk.co.jackoftrades.backend.strings.AngbandDisplayCharacter;
import uk.co.jackoftrades.backend.utils.Flag;
import uk.co.jackoftrades.frontend.colour.enums.AttributeColour;
import uk.co.jackoftrades.frontend.colour.enums.ColourType;
import uk.co.jackoftrades.middle.cave.Feature;
import uk.co.jackoftrades.middle.cave.enums.TerrainFeatureFlags;
import uk.co.jackoftrades.middle.cave.enums.TerrainFlags;
import uk.co.jackoftrades.middle.game.globals.GameConstants;
import uk.co.jackoftrades.middle.monsters.enums.MonsterRaceFlag;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TerrainParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			COMMENT = 1, EOL = 2, CODE = 3, NAME = 4, GRAPHICS = 5, MIMIC = 6, PRIORITY = 7, FLAGS = 8,
			DIGGING = 9, WALK_MSG = 10, RUN_MSG = 11, HURT_MSG = 12, DIE_MSG = 13, CONFUSED_MSG = 14,
			LOOK_PREFIX = 15, LOOK_IN_PREP = 16, RESIST_FLAG = 17, DESC = 18, COLON = 19, OR = 20,
			SINGLE_CHAR = 21, NUMBER = 22, TEXT = 23;
	public static final int
			RULE_code = 0, RULE_name = 1, RULE_graphics = 2, RULE_mimic = 3, RULE_priority = 4,
			RULE_flags = 5, RULE_walk_msg = 6, RULE_run_msg = 7, RULE_hurt_msg = 8,
			RULE_die_msg = 9, RULE_confused_msg = 10, RULE_look_prefix = 11, RULE_look_in_preposition = 12,
			RULE_resist_flag = 13, RULE_desc = 14, RULE_digging = 15, RULE_feature = 16,
			RULE_features = 17;
	private static String[] makeRuleNames() {
		return new String[]{
				"code", "name", "graphics", "mimic", "priority", "flags", "walk_msg",
				"run_msg", "hurt_msg", "die_msg", "confused_msg", "look_prefix", "look_in_preposition",
				"resist_flag", "desc", "digging", "feature", "features"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, null, null, "'code:'", "'name:'", "'graphics:'", "'mimic:'", "'priority:'",
				"'flags:'", "'digging:'", "'walk-msg:'", "'run-msg:'", "'hurt-msg:'",
				"'die-msg:'", "'confused-msg:'", "'look-prefix:'", "'look-in-preposition:'",
				"'resist-flag:'", "'desc:'", "':'", "'| '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[]{
				null, "COMMENT", "EOL", "CODE", "NAME", "GRAPHICS", "MIMIC", "PRIORITY",
				"FLAGS", "DIGGING", "WALK_MSG", "RUN_MSG", "HURT_MSG", "DIE_MSG", "CONFUSED_MSG",
				"LOOK_PREFIX", "LOOK_IN_PREP", "RESIST_FLAG", "DESC", "COLON", "OR",
				"SINGLE_CHAR", "NUMBER", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "Terrain.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public TerrainParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeContext extends ParserRuleContext {
		public TerrainFlags codeFlag;
		public Token TEXT;

		public TerminalNode CODE() {
			return getToken(TerrainParser.CODE, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_code;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(36);
				match(CODE);
				setState(37);
				((CodeContext) _localctx).TEXT = match(TEXT);

				((CodeContext) _localctx).codeFlag = TerrainFlags.valueOf("FEAT_" + ((CodeContext) _localctx).TEXT.getText());
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public String nameStr;
		public Token TEXT;

		public TerminalNode NAME() {
			return getToken(TerrainParser.NAME, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_name;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(40);
				match(NAME);
				setState(41);
				((NameContext) _localctx).TEXT = match(TEXT);

				((NameContext) _localctx).nameStr = ((NameContext) _localctx).TEXT.getText();
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GraphicsContext extends ParserRuleContext {
		public AngbandDisplayCharacter displayCharacter;
		public Token attr;
		public Token colour;

		public TerminalNode GRAPHICS() {
			return getToken(TerrainParser.GRAPHICS, 0);
		}

		public TerminalNode SINGLE_CHAR() {
			return getToken(TerrainParser.SINGLE_CHAR, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public GraphicsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_graphics;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterGraphics(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitGraphics(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitGraphics(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GraphicsContext graphics() throws RecognitionException {
		GraphicsContext _localctx = new GraphicsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_graphics);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(44);
				match(GRAPHICS);
				setState(45);
				((GraphicsContext) _localctx).attr = match(SINGLE_CHAR);
				setState(46);
				((GraphicsContext) _localctx).colour = match(TEXT);

				char displayChar = ((GraphicsContext) _localctx).attr.getText().charAt(0);
				char colourChar = ((GraphicsContext) _localctx).colour.getText().charAt(0);

				AttributeColour attrColour = ColourType.getAttributeColour(colourChar);
				((GraphicsContext) _localctx).displayCharacter = new AngbandDisplayCharacter(displayChar, attrColour);
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MimicContext extends ParserRuleContext {
		public TerrainFlags mimicFlag;
		public Token TEXT;

		public TerminalNode MIMIC() {
			return getToken(TerrainParser.MIMIC, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public MimicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_mimic;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterMimic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitMimic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitMimic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MimicContext mimic() throws RecognitionException {
		MimicContext _localctx = new MimicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mimic);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(49);
				match(MIMIC);
				setState(50);
				((MimicContext) _localctx).TEXT = match(TEXT);

				((MimicContext) _localctx).mimicFlag = TerrainFlags.valueOf("FEAT_" + ((MimicContext) _localctx).TEXT.getText());
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PriorityContext extends ParserRuleContext {
		public int priorityNum;
		public Token NUMBER;

		public TerminalNode PRIORITY() {
			return getToken(TerrainParser.PRIORITY, 0);
		}

		public TerminalNode NUMBER() {
			return getToken(TerrainParser.NUMBER, 0);
		}
		public PriorityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_priority;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterPriority(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitPriority(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitPriority(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PriorityContext priority() throws RecognitionException {
		PriorityContext _localctx = new PriorityContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_priority);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(53);
				match(PRIORITY);
				setState(54);
				((PriorityContext) _localctx).NUMBER = match(NUMBER);

				((PriorityContext) _localctx).priorityNum = Integer.parseInt(((PriorityContext) _localctx).NUMBER.getText());
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlagsContext extends ParserRuleContext {
		public ArrayList<TerrainFeatureFlags> flagList;
		public Token flag1;
		public Token flag2;

		public List<TerminalNode> FLAGS() {
			return getTokens(TerrainParser.FLAGS);
		}
		public TerminalNode FLAGS(int i) {
			return getToken(TerrainParser.FLAGS, i);
		}

		public List<TerminalNode> TEXT() {
			return getTokens(TerrainParser.TEXT);
		}
		public TerminalNode TEXT(int i) {
			return getToken(TerrainParser.TEXT, i);
		}

		public List<TerminalNode> OR() {
			return getTokens(TerrainParser.OR);
		}
		public TerminalNode OR(int i) {
			return getToken(TerrainParser.OR, i);
		}
		public FlagsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_flags;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterFlags(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitFlags(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitFlags(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlagsContext flags() throws RecognitionException {
		FlagsContext _localctx = new FlagsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_flags);

		((FlagsContext) _localctx).flagList = new ArrayList<>();
		        
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(68);
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
						case 1: {
							{
								setState(57);
								match(FLAGS);
								setState(58);
								((FlagsContext) _localctx).flag1 = match(TEXT);

								_localctx.flagList.add(TerrainFeatureFlags.valueOf("TF_" + ((FlagsContext) _localctx).flag1.getText().trim()));

								setState(65);
								_errHandler.sync(this);
								_la = _input.LA(1);
								while (_la == OR) {
									{
										{
											setState(60);
											match(OR);
											setState(61);
											((FlagsContext) _localctx).flag2 = match(TEXT);

											_localctx.flagList.add(TerrainFeatureFlags.valueOf("TF_" + ((FlagsContext) _localctx).flag2.getText().trim()));

										}
									}
									setState(67);
									_errHandler.sync(this);
									_la = _input.LA(1);
								}
							}
						}
						break;
						default:
							throw new NoViableAltException(this);
					}
					setState(70);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
				} while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Walk_msgContext extends ParserRuleContext {
		public String walkMsgStr;
		public Token TEXT;

		public TerminalNode WALK_MSG() {
			return getToken(TerrainParser.WALK_MSG, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public Walk_msgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_walk_msg;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterWalk_msg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitWalk_msg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitWalk_msg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Walk_msgContext walk_msg() throws RecognitionException {
		Walk_msgContext _localctx = new Walk_msgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_walk_msg);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(72);
				match(WALK_MSG);
				setState(73);
				((Walk_msgContext) _localctx).TEXT = match(TEXT);

				((Walk_msgContext) _localctx).walkMsgStr = ((Walk_msgContext) _localctx).TEXT.getText();
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Run_msgContext extends ParserRuleContext {
		public String runMsgStr;
		public Token TEXT;

		public TerminalNode RUN_MSG() {
			return getToken(TerrainParser.RUN_MSG, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public Run_msgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_run_msg;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterRun_msg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitRun_msg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitRun_msg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Run_msgContext run_msg() throws RecognitionException {
		Run_msgContext _localctx = new Run_msgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_run_msg);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(76);
				match(RUN_MSG);
				setState(77);
				((Run_msgContext) _localctx).TEXT = match(TEXT);

				((Run_msgContext) _localctx).runMsgStr = ((Run_msgContext) _localctx).TEXT.getText();
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Hurt_msgContext extends ParserRuleContext {
		public String hurtMsgStr;
		public Token TEXT;

		public TerminalNode HURT_MSG() {
			return getToken(TerrainParser.HURT_MSG, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public Hurt_msgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_hurt_msg;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterHurt_msg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitHurt_msg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitHurt_msg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Hurt_msgContext hurt_msg() throws RecognitionException {
		Hurt_msgContext _localctx = new Hurt_msgContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_hurt_msg);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(80);
				match(HURT_MSG);
				setState(81);
				((Hurt_msgContext) _localctx).TEXT = match(TEXT);

				((Hurt_msgContext) _localctx).hurtMsgStr = ((Hurt_msgContext) _localctx).TEXT.getText();
			        
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Die_msgContext extends ParserRuleContext {
		public String dieMsgStr;
		public Token TEXT;

		public TerminalNode DIE_MSG() {
			return getToken(TerrainParser.DIE_MSG, 0);
		}

		public TerminalNode TEXT() {
			return getToken(TerrainParser.TEXT, 0);
		}
		public Die_msgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_die_msg;
		}
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).enterDie_msg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TerrainListener) ((TerrainListener) listener).exitDie_msg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof TerrainVisitor) return ((TerrainVisitor<? extends T>) visitor).visitDie_msg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Die_msgContext die_msg() throws RecognitionException {
		Die_msgContext _localctx = new Die_msgContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_die_msg);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(84);
				match(DIE_MSG);
				setState(85);
				((Die_msgContext) _localctx).TEXT = match(TEXT);
